Log training data with gain of every subphrase

--- a/msmarco.ipynb
+++ b/msmarco.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ltr.client import SolrClient\n",
+    "from ltr.index import rebuild\n",
+    "\n",
+    "\n",
+    "client=SolrClient()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2046,14 +2059,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2104,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2118,15 +2131,19 @@
     "    \n",
     "    sorted_bigrams = []\n",
     "    \n",
+    "    base_rr = 0\n",
+    "    \n",
     "    # Try to find the single best bigram...\n",
     "    all_bigrams = [big for big in bigrams(qrel.keywords.split(' '))]\n",
     "    all_bigrams.insert(0, ('', '') ) # Dont append any bigram\n",
-    "    for bigram in all_bigrams:\n",
-    "        if bigram is not None and len(bigram) > 1: \n",
+    "    for idx, bigram in enumerate(all_bigrams):\n",
+    "        if idx > 0 and bigram is not None and len(bigram) > 1: \n",
     "            params['fq'] = '{!lucene df=body}\"%s %s\"' % bigram\n",
     "        \n",
     "        rr = eval_one(client, qrel, params)\n",
-    "        sorted_bigrams.append( (rr, bigram) )\n",
+    "        if idx == 0:\n",
+    "            base_rr = rr\n",
+    "        sorted_bigrams.append( (rr - base_rr, bigram) )\n",
     "    sorted_bigrams.sort(key=lambda v: v[0], reverse=True)\n",
     "    return sorted_bigrams\n",
     "    \n",
@@ -2135,213 +2152,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Generated training data 19 queries\n",
+      "Gain/Loss 0.1072180612369074/-0.09431938159879336\n",
+      "Generated training data 39 queries\n",
+      "Gain/Loss 0.08707967570885206/-0.1537938593735946\n",
+      "Generated training data 59 queries\n",
+      "Gain/Loss 0.09878446084052725/-0.14971379810944158\n",
+      "Generated training data 79 queries\n",
+      "Gain/Loss 0.1063668990972367/-0.17035018815427372\n",
       "Generated training data 99 queries\n",
-      "Gain So Far 0.2389346530846905\n",
-      "Generated training data 199 queries\n",
-      "Gain So Far 0.26934605127257016\n",
-      "Generated training data 299 queries\n",
-      "Gain So Far 0.277218019100739\n",
-      "Generated training data 399 queries\n",
-      "Gain So Far 0.3025357985259824\n",
-      "Generated training data 499 queries\n",
-      "Gain So Far 0.30488836275182557\n",
-      "Generated training data 599 queries\n",
-      "Gain So Far 0.30341737810661895\n",
-      "Generated training data 699 queries\n",
-      "Gain So Far 0.30020945439408603\n",
-      "Generated training data 799 queries\n",
-      "Gain So Far 0.30654582428384386\n",
-      "Generated training data 899 queries\n",
-      "Gain So Far 0.3061488230209199\n",
-      "Generated training data 999 queries\n",
-      "Gain So Far 0.3051536141925455\n",
-      "Generated training data 1099 queries\n",
-      "Gain So Far 0.3110115511872556\n",
-      "Generated training data 1199 queries\n",
-      "Gain So Far 0.31217072759167314\n",
-      "Generated training data 1299 queries\n",
-      "Gain So Far 0.31114254042627004\n",
-      "Generated training data 1399 queries\n",
-      "Gain So Far 0.31015284271338855\n",
-      "Generated training data 1499 queries\n",
-      "Gain So Far 0.31015351144917086\n",
-      "Generated training data 1599 queries\n",
-      "Gain So Far 0.306241083029255\n",
-      "Generated training data 1699 queries\n",
-      "Gain So Far 0.30546895931082974\n",
-      "Generated training data 1799 queries\n",
-      "Gain So Far 0.3072865727885037\n",
-      "Generated training data 1899 queries\n",
-      "Gain So Far 0.3048532566592777\n",
-      "Generated training data 1999 queries\n",
-      "Gain So Far 0.3046654416369545\n",
-      "Generated training data 2099 queries\n",
-      "Gain So Far 0.30346040544628455\n",
-      "Generated training data 2199 queries\n",
-      "Gain So Far 0.30193559232280026\n",
-      "Generated training data 2299 queries\n",
-      "Gain So Far 0.3014591632431959\n",
-      "Generated training data 2399 queries\n",
-      "Gain So Far 0.3005119204798256\n",
-      "Generated training data 2499 queries\n",
-      "Gain So Far 0.30173334731253626\n",
-      "Generated training data 2599 queries\n",
-      "Gain So Far 0.30314492568741513\n",
-      "Generated training data 2699 queries\n",
-      "Gain So Far 0.3009804617917452\n",
-      "Generated training data 2799 queries\n",
-      "Gain So Far 0.3040013465072299\n",
-      "Generated training data 2899 queries\n",
-      "Gain So Far 0.3051279876985535\n",
-      "Generated training data 2999 queries\n",
-      "Gain So Far 0.30184751365159407\n",
-      "Generated training data 3099 queries\n",
-      "Gain So Far 0.30179870687390703\n",
-      "Generated training data 3199 queries\n",
-      "Gain So Far 0.30154355555839274\n",
-      "Generated training data 3299 queries\n",
-      "Gain So Far 0.30067261244562593\n",
-      "Generated training data 3399 queries\n",
-      "Gain So Far 0.2983889402063022\n",
-      "Generated training data 3499 queries\n",
-      "Gain So Far 0.3005632240636248\n",
-      "Generated training data 3599 queries\n",
-      "Gain So Far 0.300225342910675\n",
-      "Generated training data 3699 queries\n",
-      "Gain So Far 0.29888798964725977\n",
-      "Generated training data 3799 queries\n",
-      "Gain So Far 0.29860417990551763\n",
-      "Generated training data 3899 queries\n",
-      "Gain So Far 0.29935578363170623\n",
-      "Generated training data 3999 queries\n",
-      "Gain So Far 0.2978669703438288\n",
-      "Generated training data 4099 queries\n",
-      "Gain So Far 0.29693572086670306\n",
-      "Generated training data 4199 queries\n",
-      "Gain So Far 0.2986696284342412\n",
-      "Generated training data 4299 queries\n",
-      "Gain So Far 0.2985548088448698\n",
-      "Generated training data 4399 queries\n",
-      "Gain So Far 0.29923919600521465\n",
-      "Generated training data 4499 queries\n",
-      "Gain So Far 0.2989403470541022\n",
-      "Generated training data 4599 queries\n",
-      "Gain So Far 0.29964285202701746\n",
-      "Generated training data 4699 queries\n",
-      "Gain So Far 0.29788951463805996\n",
-      "Generated training data 4799 queries\n",
-      "Gain So Far 0.2979708873879709\n",
-      "Generated training data 4899 queries\n",
-      "Gain So Far 0.29835187681856723\n",
-      "Generated training data 4999 queries\n",
-      "Gain So Far 0.2985761256037174\n",
-      "Generated training data 5099 queries\n",
-      "Gain So Far 0.2975138676141037\n",
-      "Generated training data 5199 queries\n",
-      "Gain So Far 0.29666944981998544\n",
-      "Generated training data 5299 queries\n",
-      "Gain So Far 0.29671431355140915\n",
-      "Generated training data 5399 queries\n",
-      "Gain So Far 0.29712543163031707\n",
-      "Generated training data 5499 queries\n",
-      "Gain So Far 0.29652888386469645\n",
-      "Generated training data 5599 queries\n",
-      "Gain So Far 0.29688786782215\n",
-      "Generated training data 5699 queries\n",
-      "Gain So Far 0.29702677883172385\n",
-      "Generated training data 5799 queries\n",
-      "Gain So Far 0.29672077205190067\n",
-      "Generated training data 5899 queries\n",
-      "Gain So Far 0.2966205554345799\n",
-      "Generated training data 5999 queries\n",
-      "Gain So Far 0.296891804986616\n",
-      "Generated training data 6099 queries\n",
-      "Gain So Far 0.2964002579645259\n",
-      "Generated training data 6199 queries\n",
-      "Gain So Far 0.2961162585046374\n",
-      "Generated training data 6299 queries\n",
-      "Gain So Far 0.2958303447266282\n",
-      "Generated training data 6399 queries\n",
-      "Gain So Far 0.29605844232221035\n",
-      "Generated training data 6499 queries\n",
-      "Gain So Far 0.29659910603931144\n",
-      "Generated training data 6599 queries\n",
-      "Gain So Far 0.2963628550504362\n",
-      "Generated training data 6699 queries\n",
-      "Gain So Far 0.2965365085070478\n",
-      "Generated training data 6799 queries\n",
-      "Gain So Far 0.29540530777800555\n",
-      "Generated training data 6899 queries\n",
-      "Gain So Far 0.2958664507030442\n",
-      "Generated training data 6999 queries\n",
-      "Gain So Far 0.2963937090442855\n",
-      "Generated training data 7099 queries\n",
-      "Gain So Far 0.29644264319700836\n",
-      "Generated training data 7199 queries\n",
-      "Gain So Far 0.29680109761917145\n",
-      "Generated training data 7299 queries\n",
-      "Gain So Far 0.2968946878074175\n",
-      "Generated training data 7399 queries\n",
-      "Gain So Far 0.29615380779026623\n",
-      "Generated training data 7499 queries\n",
-      "Gain So Far 0.29680918757720204\n",
-      "Generated training data 7599 queries\n",
-      "Gain So Far 0.296555881895518\n",
-      "Generated training data 7699 queries\n",
-      "Gain So Far 0.29562957859390016\n",
-      "Generated training data 7799 queries\n",
-      "Gain So Far 0.29501525384552724\n",
-      "Generated training data 7899 queries\n",
-      "Gain So Far 0.29514107358579444\n",
-      "Generated training data 7999 queries\n",
-      "Gain So Far 0.2951267468440559\n",
-      "Generated training data 8099 queries\n",
-      "Gain So Far 0.29501882730358936\n",
-      "Generated training data 8199 queries\n",
-      "Gain So Far 0.2953924138277506\n",
-      "Generated training data 8299 queries\n",
-      "Gain So Far 0.29679628171365474\n",
-      "Generated training data 8399 queries\n",
-      "Gain So Far 0.2967439196706798\n",
-      "Generated training data 8499 queries\n",
-      "Gain So Far 0.296703794263348\n",
-      "Generated training data 8599 queries\n",
-      "Gain So Far 0.297576379913951\n",
-      "Generated training data 8699 queries\n",
-      "Gain So Far 0.297210259409587\n",
-      "Generated training data 8799 queries\n",
-      "Gain So Far 0.2963287022205736\n",
-      "Generated training data 8899 queries\n",
-      "Gain So Far 0.2965663462438502\n",
-      "Generated training data 8999 queries\n",
-      "Gain So Far 0.2960109740867993\n",
-      "Generated training data 9099 queries\n",
-      "Gain So Far 0.2961057968362335\n",
-      "Generated training data 9199 queries\n",
-      "Gain So Far 0.2963783553843354\n",
-      "Generated training data 9299 queries\n",
-      "Gain So Far 0.2958093186803466\n",
-      "Generated training data 9399 queries\n",
-      "Gain So Far 0.2956394745405131\n",
-      "Generated training data 9499 queries\n",
-      "Gain So Far 0.29521680066844175\n",
-      "Generated training data 9599 queries\n",
-      "Gain So Far 0.29503390413503394\n",
-      "Generated training data 9699 queries\n",
-      "Gain So Far 0.2948790192560742\n",
-      "Generated training data 9799 queries\n",
-      "Gain So Far 0.29515622612366293\n",
-      "Generated training data 9899 queries\n",
-      "Gain So Far 0.295424647222994\n",
-      "Generated training data 9999 queries\n",
-      "Gain So Far 0.2953715674822576\n"
+      "Gain/Loss 0.10437444852785814/-0.1612128166658249\n"
      ]
     }
    ],
@@ -2350,41 +2177,31 @@
     "import random\n",
     "\n",
     "\n",
-    "first_50k_sample = [k for k in qrels.keys()]\n",
-    "random.seed(1234)\n",
-    "random.shuffle(first_50k_sample)\n",
-    "first_50k_sample = first_50k_sample[:10000]\n",
+    "all_qrel_keys = [k for k in qrels.keys()]\n",
     "gain = 0\n",
+    "loss = 0\n",
     "import csv\n",
     "\n",
     "with open('train.csv', 'w') as f:\n",
     "    \n",
     "    writer = csv.writer(f)\n",
     "\n",
-    "    for idx, qid in enumerate(first_50k_sample):\n",
+    "    for idx, qid in enumerate(all_qrel_keys):\n",
     "        qrel = qrels[qid]\n",
     "        sorted_bigrams = phrase_search(client, qrel)\n",
     "        formatted_big = [(scored_bigram[0], \"%s %s\" % (scored_bigram[1][0],scored_bigram[1][1])) \n",
-    "                         for scored_bigram in sorted_bigrams][0]\n",
+    "                         for scored_bigram in sorted_bigrams]\n",
+    "        \n",
+    "        for big in formatted_big:\n",
+    "            row = (big[0], big[1], qrel.keywords)\n",
+    "            writer.writerow(row)\n",
     "\n",
-    "        with_no_bigram = None\n",
-    "        for scored_bigram in sorted_bigrams:\n",
-    "            if scored_bigram[1] == ('',''):\n",
-    "                with_no_bigram = scored_bigram\n",
-    "        this_gain = formatted_big[0] - with_no_bigram[0]\n",
-    "        # print(this_gain, formatted_big, with_no_bigram, qrel.keywords)\n",
-    "        if this_gain == 0:\n",
-    "            row = (this_gain, '', qrel.keywords)\n",
-    "        else:\n",
-    "            row = (this_gain, formatted_big[1], qrel.keywords)\n",
-    "            \n",
-    "        writer.writerow(row)\n",
+    "        gain += formatted_big[0][0]\n",
+    "        loss += formatted_big[-1][0]\n",
     "\n",
-    "        gain += this_gain\n",
-    "\n",
-    "        if (idx % 100 == 99):\n",
+    "        if (idx % 20 == 19):\n",
     "            print(\"Generated training data %s queries\" % idx)\n",
-    "            print(\"Gain So Far %s\" % (gain/(idx+1)))"
+    "            print(\"Gain/Loss %s/%s\" % (gain/(idx+1), loss/(idx+1)))"
    ]
   },
   {
