clear ipynb outputs

--- a/netfix movies-Copy1.ipynb
+++ b/netfix movies-Copy1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,6 +491,7 @@
     "    if 'belongs_to_collection' in src_movie and src_movie['belongs_to_collection'] is not None:\n",
     "        if 'name' in src_movie['belongs_to_collection']:\n",
     "            base_doc['collection_name'] = src_movie['belongs_to_collection']['name']\n",
+    "   \n",
     "    return base_doc\n",
     "\n",
     "from ltr.index import rebuild_tmdb\n",
@@ -506,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +618,21 @@
     "                    \"match_phrase\": {\"collection_name\": \n",
     "                                {\"query\": \"{{keywords}}\"}}\n",
     "                }\n",
-    "            }\n",
+    "            },\n",
+    "           {\n",
+    "                \"name\": \"title_wdf_bm25\",\n",
+    "                \"params\": [\"keywords\"],\n",
+    "                \"template\": {\n",
+    "                    \"match\": {\"title.wdf\": \"{{keywords}}\"}\n",
+    "                }\n",
+    "            },\n",
+    "             {\n",
+    "                \"name\": \"title_keyword_bm25\",\n",
+    "                \"params\": [\"keywords\"],\n",
+    "                \"template\": {\n",
+    "                    \"match\": {\"title.keyword\": \"{{keywords}}\"}\n",
+    "                }\n",
+    "            },\n",
     "            \n",
     "            \n",
     "            ]\n",
@@ -631,25 +646,25 @@
     "\n",
     "from ltr.log import judgments_to_training_set\n",
     "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title2_judgments_train.txt', \n",
+    "                                        judgmentInFile='data/title_judgments2.txt', \n",
+    "                                        trainingOutFile='data/title_judgments2_train.txt', \n",
     "                                        featureSet='title2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ltr.train import feature_search\n",
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               trainingInFile='data/title2_judgments_train.txt',\n",
+    "                                               trainingInFile='data/title_judgments2_train.txt',\n",
     "                                               metric2t='NDCG@10',\n",
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
     "                                               kcv=15,\n",
-    "                                               features=[1,2,3,4,5,6,7,8,9],\n",
+    "                                               features=[1,2,3,4,5,6,7,8,9,10,11],\n",
     "                                               featureSet='title2')\n",
     "\n",
     "print()\n",
@@ -670,18 +685,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ltr import train\n",
     "trainLog  = train(client,\n",
-    "                  trainingInFile='data/title2_judgments_train.txt',\n",
+    "                  trainingInFile='data/title_judgments2_train.txt',\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
     "                  index='tmdb',\n",
-    "                  features=[1,4,6,7,8],\n",
+    "                  features=[1,4,6,7,8,9],\n",
     "                  featureSet='title2',\n",
     "                  modelName='title2')\n",
     "\n",
@@ -698,19 +713,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from ltr.client import ElasticClient\n",
+    "from ltr.MART_model import eval_model\n",
+    "from ltr.judgments import judgments_from_file, judgments_by_qid\n",
+    "\n",
+    "features, _ = client.feature_set(index='tmdb', name='title2')\n",
+    "\n",
+    "judgmentDict = judgments_by_qid(judgments_from_file(filename='data/title_judgments2_train.txt'))\n",
+    "\n",
+    "\n",
+    "all_queries = []\n",
+    "for qid, judg_list in judgmentDict.items():\n",
+    "    all_queries.extend(judg_list)\n",
+    "print(len(all_queries))\n",
+    "\n",
+    "rambo=judgmentDict[1]\n",
+    "\n",
+    "model = eval_model(modelName='title2',\n",
+    "                       features=features,\n",
+    "                       judgments=all_queries)\n",
+    "\n",
+    "print()\n",
+    "print(\"## Evaluating graded docs for search keywords '%s'\" % rambo[0].keywords)\n",
+    "print()\n",
+    "print(model)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "whoopsies = model.whoopsies()\n",
+    "for qid, whoopsie in whoopsies.items():\n",
+    "    print(\"== QID %s ==\" % qid)\n",
+    "    print(\"%s - %s\" % (whoopsie.count, whoopsie.totalMagnitude))\n",
+    "    print(whoopsie.perTreeReport())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.get_doc(365371, index='tmdb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.get_doc(860, index='tmdb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ltr import search\n",
-    "search(client, \"cartoon with basketball aliens\", modelName='title2')"
+    "search(client, \"rocky\", index='tmdb', modelName='title2')"
    ]
   },
   {
