Comemnts on MSMarco notebook

--- a/msmarco-loading.ipynb
+++ b/msmarco-loading.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,23 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Term vectors\n",
-    "\n",
-    "Dump term vectors of every question & document for later processing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dump term vectors for all docs & questions for further analysis\n",
-    "# (LEAVE RUNNING OVERNIGHT)\n",
-    "from ltr.helpers.msmarco.tv.dump_term_vects import dump_term_vects\n",
-    "#\n",
-    "dump_term_vects(terms_type='document')\n",
-    "dump_term_vects(terms_type='question', dump_every=400000)"
+    "# Some experiments"
    ]
   },
   {
