Organize notebooks to approp. subfolders
- LTR script to hook back to ltr
- Change to using local data dir for collection
- Configurable path for elastic client config

--- a/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
+++ b/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "from ltr.client import ElasticClient\n",
-    "client=ElasticClient()"
+    "client=ElasticClient(configs_dir='../../../docker/elasticsearch/')"
    ]
   },
   {
@@ -300,6 +300,13 @@
     "search(client, \"beer\", modelName='test', \n",
     "       index='blog', fields=blog_fields)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
