--- a/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
+++ b/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "from ltr.client import ElasticClient\n",
-    "client=ElasticClient(configs_dir='../../../docker/elasticsearch/')"
+    "client=ElasticClient()"
    ]
   },
   {
@@ -300,13 +300,6 @@
     "search(client, \"beer\", modelName='test', \n",
     "       index='blog', fields=blog_fields)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
