Fix msmarco download links to gz

--- a/notebooks/solr/msmarco/msmarco.ipynb
+++ b/notebooks/solr/msmarco/msmarco.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# Download MSMarco Corpus and Queries -> data directory\n",
-    "from ltr import download\n",
+    "from ltr.download import download_msmarco\n",
     "download_msmarco()"
    ]
   },
@@ -45,11 +45,12 @@
     "\n",
     "import csv\n",
     "import sys\n",
+    "import gzip\n",
     "\n",
     "csv.field_size_limit(sys.maxsize)\n",
     "\n",
     "def marco_docs():\n",
-    "    with open('data/msmarco-docs.tsv') as tsvfile:\n",
+    "    with gzip.open('data/msmarco-docs.tsv.gz', 'rt') as tsvfile:\n",
     "        reader = csv.reader(tsvfile, delimiter='\\t')\n",
     "        i = 0;\n",
     "        for row in reader:\n",
@@ -64,19 +65,18 @@
     "                    print(\"Dumped (%s/%s) %s\" % (i, 3213835, row[1]))\n",
     "                    \n",
     "def marco_questions():\n",
-    "    with open('data/msmarco-doctrain-queries.tsv') as tsvfile:\n",
+    "    with gzip.open('data/msmarco-doctrain-queries.tsv.gz', 'rt') as tsvfile:\n",
     "        reader = csv.reader(tsvfile, delimiter='\\t')\n",
     "        i = 0;\n",
     "        for row in reader:\n",
-    "        \n",
-    "                yield {\"id\": 'Q' + row[0],\n",
-    "                       \"url\": '',\n",
-    "                       \"title\": row[1],\n",
-    "                       \"body\": row[1],\n",
-    "                       \"type\": \"question\"}\n",
-    "                i+=1\n",
-    "                if i % 10000 == 0:\n",
-    "                    print(\"Dumped (q) (%s/%s) %s\" % (i, 367013, row[1]))\n",
+    "            yield {\"id\": 'Q' + row[0],\n",
+    "                   \"url\": '',\n",
+    "                   \"title\": row[1],\n",
+    "                   \"body\": row[1],\n",
+    "                   \"type\": \"question\"}\n",
+    "            i+=1\n",
+    "            if i % 10000 == 0:\n",
+    "                print(\"Dumped (q) (%s/%s) %s\" % (i, 367013, row[1]))\n",
     "                    \n",
     "\n",
     "def marco_questions_and_docs():\n",
