Fix all solr notebooks

--- a/notebooks/solr/tmdb/netfix movies(Solr).ipynb
+++ b/notebooks/solr/tmdb/netfix movies(Solr).ipynb
@@ -453,7 +453,7 @@
    "source": [
     "\n",
     "\n",
-    "client.get_doc(doc_id=1368)"
+    "client.get_doc(index='tmdb', doc_id=1368)"
    ]
   },
   {
@@ -517,7 +517,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.get_doc(doc_id=319074)"
+    "client.get_doc(index='tmdb', doc_id=319074)"
    ]
   },
   {
@@ -829,7 +829,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.get_doc(doc_id=1892)"
+    "client.get_doc(index='tmdb', doc_id=1892)"
    ]
   },
   {
