fixes to elasticsearch tmdb notebooks

--- a/notebooks/elasticsearch/tmdb/netfix movies.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies.ipynb
@@ -810,7 +810,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.get_doc(doc_id=1892)"
+    "client.get_doc(index='tmdb', doc_id=1892)"
    ]
   },
   {
@@ -904,7 +904,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.get_doc(doc_id=860)"
+    "client.get_doc(index='tmdb', doc_id=860)"
    ]
   },
   {
