--- a/notebooks/elasticsearch/tmdb/sandbox.ipynb
+++ b/notebooks/elasticsearch/tmdb/sandbox.ipynb
@@ -65,7 +65,7 @@
     "}\n",
     "\n",
     "from ltr import setup\n",
-    "setup(client, config=config, featureset='sandbox')"
+    "setup(client, index='tmdb', config=config, featureset='sandbox')"
    ]
   },
   {
@@ -108,6 +108,7 @@
     "'''\n",
     "from ltr import train\n",
     "trainLog  = train(client,\n",
+    "                  index='tmdb',\n",
     "                  trainingInFile='data/sandbox_judgments_train.txt',\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
@@ -167,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
