Add tests to run (most) notebooks; associated fixes (#26)
* Execute each ipynb check for 0 errors

* Rename to run all

* Merge nate's file check change

* Dont load movie json until asked

* Remove empty cell

* Fix msmarco download links to gz

* Down clutter up dirs with output ipynb

* Fix MSMarco notebook

* missing ltr hook

* Fix all solr notebooks

* fixes to elasticsearch tmdb notebooks

* Fix ES sandbox

* Refactor running bulk notebooks code

* Refresh after bulk index to capture changes

* Remove unused run_notebooks

* write notebook location

* Update readme with testing notes, update gitignore

* SolrClient: commit after final flush

* Update README.md

Co-authored-by: Nathan Day <nathancday@gmail.com>
Co-authored-by: Daniel Worley <danworley@gmail.com>

--- a/notebooks/solr/msmarco/msmarco.ipynb
+++ b/notebooks/solr/msmarco/msmarco.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# Download MSMarco Corpus and Queries -> data directory\n",
-    "from ltr import download\n",
+    "from ltr.download import download_msmarco\n",
     "download_msmarco()"
    ]
   },
@@ -45,11 +45,12 @@
     "\n",
     "import csv\n",
     "import sys\n",
+    "import gzip\n",
     "\n",
     "csv.field_size_limit(sys.maxsize)\n",
     "\n",
     "def marco_docs():\n",
-    "    with open('data/msmarco-docs.tsv') as tsvfile:\n",
+    "    with gzip.open('data/msmarco-docs.tsv.gz', 'rt') as tsvfile:\n",
     "        reader = csv.reader(tsvfile, delimiter='\\t')\n",
     "        i = 0;\n",
     "        for row in reader:\n",
@@ -64,19 +65,18 @@
     "                    print(\"Dumped (%s/%s) %s\" % (i, 3213835, row[1]))\n",
     "                    \n",
     "def marco_questions():\n",
-    "    with open('data/msmarco-doctrain-queries.tsv') as tsvfile:\n",
+    "    with gzip.open('data/msmarco-doctrain-queries.tsv.gz', 'rt') as tsvfile:\n",
     "        reader = csv.reader(tsvfile, delimiter='\\t')\n",
     "        i = 0;\n",
     "        for row in reader:\n",
-    "        \n",
-    "                yield {\"id\": 'Q' + row[0],\n",
-    "                       \"url\": '',\n",
-    "                       \"title\": row[1],\n",
-    "                       \"body\": row[1],\n",
-    "                       \"type\": \"question\"}\n",
-    "                i+=1\n",
-    "                if i % 10000 == 0:\n",
-    "                    print(\"Dumped (q) (%s/%s) %s\" % (i, 367013, row[1]))\n",
+    "            yield {\"id\": 'Q' + row[0],\n",
+    "                   \"url\": '',\n",
+    "                   \"title\": row[1],\n",
+    "                   \"body\": row[1],\n",
+    "                   \"type\": \"question\"}\n",
+    "            i+=1\n",
+    "            if i % 10000 == 0:\n",
+    "                print(\"Dumped (q) (%s/%s) %s\" % (i, 367013, row[1]))\n",
     "                    \n",
     "\n",
     "def marco_questions_and_docs():\n",
@@ -129,7 +129,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "sample_qids = [k for k in qrels.keys()]\n",
+    "random.shuffle(sample_qids)\n",
+    "sample_qids = sample_qids[:100]\n",
+    "sample_qids"
+   ]
   },
   {
    "cell_type": "code",
@@ -143,6 +150,9 @@
     "def eval_one(client, qrel, params, at=50):\n",
     "    \"\"\" Eval a single Solr query param for MRR\"\"\"\n",
     "    kw = esc_kw(qrel.keywords)\n",
+    "    \n",
+    "    import copy\n",
+    "    params = copy.deepcopy(params)\n",
     "\n",
     "    params['q'] = kw\n",
     "    params['rows'] = at\n",
@@ -188,97 +198,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bigrams(terms):\n",
-    "    \"\"\" Every item in a list with it's next item \"\"\"\n",
-    "    return zip(terms, terms[1:])\n",
-    "\n",
-    "def analyze_tokenize(client, keywords):\n",
-    "    \"\"\" Use the appropriatte analyzer for bigrams\"\"\"\n",
-    "    tok_stream = client.analyze(index='msmarco', fieldtype='text_general',\n",
-    "                                text=keywords)\n",
-    "    terms = [tok['text'] for tok in tok_stream]\n",
-    "    return terms\n",
-    "\n",
-    "\n",
-    "def phrase_search(client, qrel):\n",
-    "    \"\"\"Find the bigrams that optimize mrr\"\"\"\n",
-    "    params = {\"qf\": \"body\", \"defType\": \"edismax\"}\n",
-    "    \n",
-    "    sorted_bigrams = []\n",
-    "    \n",
-    "    base_rr = 0\n",
-    "    \n",
-    "    # Try to find the single best bigram...\n",
-    "    #all_bigrams = [big for big in bigrams(qrel.keywords.split(' '))]\n",
-    "    \n",
-    "    all_bigrams = [big for big in bigrams(analyze_tokenize(client, qrel.keywords))]\n",
-    "    all_bigrams.insert(0, ('', '') ) # Dont append any bigram\n",
-    "    for idx, bigram in enumerate(all_bigrams):\n",
-    "        if idx > 0 and bigram is not None and len(bigram) > 1: \n",
-    "            params['fq'] = '{!lucene df=body}\"%s %s\"' % bigram\n",
-    "        \n",
-    "        rr = eval_one(client, qrel, params)\n",
-    "        if idx == 0:\n",
-    "            base_rr = rr\n",
-    "        sorted_bigrams.append( (rr - base_rr, bigram, idx) )\n",
-    "    sorted_bigrams.sort(key=lambda v: v[0], reverse=True)\n",
-    "    return sorted_bigrams\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sample first queries to build a training set\n",
-    "import random\n",
-    "\n",
-    "\n",
-    "all_qrel_keys = [k for k in qrels.keys()]\n",
-    "random.shuffle(all_qrel_keys)\n",
-    "gain = 0\n",
-    "loss = 0\n",
-    "import csv\n",
-    "\n",
-    "with open('data/train.csv', 'w') as f:\n",
-    "    \n",
-    "    writer = csv.writer(f)\n",
-    "\n",
-    "    for idx, qid in enumerate(all_qrel_keys):\n",
-    "        qrel = qrels[qid]\n",
-    "        sorted_bigrams = phrase_search(client, qrel)\n",
-    "        formatted_big = [(scored_bigram[0], \n",
-    "                          \"%s %s\" % (scored_bigram[1][0],scored_bigram[1][1]),\n",
-    "                          scored_bigram[2]\n",
-    "                         ) \n",
-    "                         for scored_bigram in sorted_bigrams]\n",
-    "        \n",
-    "        for big in formatted_big:\n",
-    "            row = (big[0], big[1], big[2], qid, qrel.keywords)\n",
-    "            writer.writerow(row)\n",
-    "\n",
-    "        gain += formatted_big[0][0]\n",
-    "        loss += formatted_big[-1][0]\n",
-    "\n",
-    "        if (idx % 20 == 19):\n",
-    "            print(\"Generated training data %s queries\" % idx)\n",
-    "            print(\"Gain/Loss %s/%s\" % (gain/(idx+1), loss/(idx+1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "all_rrs_title = eval_many(client, qrels, sample_qids, {\"qf\": \"title\", \"defType\": \"edismax\"})\n",
     "all_rrs_body = eval_many(client, qrels, sample_qids, {\"qf\": \"body\", \"defType\": \"edismax\"})\n",
     "all_rrs_all = eval_many(client, qrels, sample_qids, {\"qf\": \"title body url\", \"defType\": \"edismax\"})\n",
     "all_rrs_all_tie = eval_many(client, qrels, sample_qids, {\"qf\": \"title body url\", \"tie\": 1.0, \"defType\": \"edismax\"})\n",
-    "\n",
+    "all_rrs_all_pf2 = eval_many(client, qrels, sample_qids, {\"qf\": \"body\", \"pf2\": \"body\", \"tie\": 1.0,  \"defType\": \"edismax\"})\n",
     "\n"
    ]
   },
@@ -371,13 +295,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_rrs_all_pf2 = eval_many(client, qrels, sample_qids, \n",
-    "                            {\"qf\": \"body\",\n",
-    "                             \"pf2\": \"body\",\n",
-    "                             \"tie\": 1.0, \n",
-    "                             \"defType\": \"edismax\"})\n",
+    "draw_rr_dist(all_rrs_all_pf2, \"PF2 Search\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
