Update elastic client, fix the osc blog issues

--- a/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
+++ b/notebooks/elasticsearch/osc-blog/osc-blog.ipynb
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "from ltr.index import rebuild\n",
-    "rebuild(client, index='blog', doc_type='post', doc_src=articles)"
+    "rebuild(client, index='blog', doc_src=articles)"
    ]
   },
   {
