Add rebuild code block to the ES raw commands

--- a/notebooks/elasticsearch/tmdb/raw-es-commands.ipynb
+++ b/notebooks/elasticsearch/tmdb/raw-es-commands.ipynb
@@ -16,6 +16,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rebuild the index if necessary\n",
+    "from ltr.index import rebuild_tmdb\n",
+    "rebuild_tmdb(client)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
